# numero

./: .gitignore  Cargo.toml  README.md
src/: ast.rs  ast_pass.rs  cli.rs  codegen.rs  lex.rs  lib.rs  parse.rs
src/ast/: debug.rs  expr.rs  item.rs  node.rs  ops.rs  symbol.rs  token.rs  type.rs
src/ast_pass/: debug.rs  name_resolve.rs  to_llvm.rs
src/cli/: build.rs  repl.rs  run.rs
src/codegen/: llvm.rs
src/lex/: scan.rs  stream.rs
src/parse/: comb.rs  gram.rs  op_prec.rs  syntax.rs
src/parse/syntax/: comb.rs  delim.rs  stmt.rs  top.rs
